[gd_scene load_steps=21 format=3 uid="uid://c155edibjets4"]

[ext_resource type="Script" path="res://scripts/character_selection.gd" id="1_rvoct"]
[ext_resource type="Texture2D" uid="uid://bbkct62xql5x3" path="res://assets/backround/choose.jpeg" id="1_v03rp"]
[ext_resource type="Texture2D" uid="uid://ch2rpuotwpwb0" path="res://assets/pokemon sprites/ive-been-doing-these-pok√©mon-sprite-recolourations-recently-v0-af77xtzb4hpb1.webp" id="3_fqrbt"]
[ext_resource type="Texture2D" uid="uid://bk5l2wtci2doy" path="res://assets/pokemon sprites/charizard_select.png" id="4_xguxx"]
[ext_resource type="Texture2D" uid="uid://b71uib18qfqy8" path="res://assets/pokemon sprites/blastoise_select.png" id="5_uru24"]

[sub_resource type="AtlasTexture" id="AtlasTexture_abtsh"]
atlas = ExtResource("3_fqrbt")
region = Rect2(0, 0, 640, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_anjjp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abtsh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_8b0us"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(76, -44)]
}

[sub_resource type="Animation" id="Animation_cin8j"]
resource_name = "venasaur select"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(76, -44), Vector2(76, -63)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8jco1"]
_data = {
"RESET": SubResource("Animation_8b0us"),
"venasaur select": SubResource("Animation_cin8j")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_dphti"]
atlas = ExtResource("4_xguxx")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_nnky6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dphti")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_3sldj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharizardSelect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, -60)]
}

[sub_resource type="Animation" id="Animation_r5bpx"]
resource_name = "charizard"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharizardSelect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, -60), Vector2(80, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fc708"]
_data = {
"RESET": SubResource("Animation_3sldj"),
"charizard": SubResource("Animation_r5bpx")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lboym"]
atlas = ExtResource("5_uru24")
region = Rect2(0, 0, 108, 108)

[sub_resource type="SpriteFrames" id="SpriteFrames_ve27k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lboym")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_smtd4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, -51)]
}

[sub_resource type="Animation" id="Animation_pnxj4"]
resource_name = "blastoise select"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(72, -51), Vector2(72, -40)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qdrhr"]
_data = {
"RESET": SubResource("Animation_smtd4"),
"blastoise select": SubResource("Animation_pnxj4")
}

[node name="Character Selection" type="Node2D"]
script = ExtResource("1_rvoct")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 649.0
texture = ExtResource("1_v03rp")
expand_mode = 1

[node name="Venasaur" type="TextureButton" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 268.0
offset_top = 247.0
offset_right = 418.0
offset_bottom = 360.265
mouse_default_cursor_shape = 2

[node name="VenasaurSelect" type="AnimatedSprite2D" parent="TextureRect/Venasaur"]
visible = false
position = Vector2(76, -44)
scale = Vector2(0.2875, 0.289062)
sprite_frames = SubResource("SpriteFrames_anjjp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/Venasaur/VenasaurSelect"]
libraries = {
"": SubResource("AnimationLibrary_8jco1")
}
autoplay = "venasaur select"

[node name="Charizard" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 495.0
offset_top = 305.0
offset_right = 654.0
offset_bottom = 419.0
mouse_default_cursor_shape = 2

[node name="CharizardSelect" type="AnimatedSprite2D" parent="TextureRect/Charizard"]
visible = false
position = Vector2(80, -60)
scale = Vector2(0.1585, 0.1445)
sprite_frames = SubResource("SpriteFrames_nnky6")
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/Charizard/CharizardSelect"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_fc708")
}
autoplay = "charizard"

[node name="Blastoise" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 736.0
offset_top = 253.0
offset_right = 881.0
offset_bottom = 363.0
mouse_default_cursor_shape = 2

[node name="BlastoiseSelect" type="AnimatedSprite2D" parent="TextureRect/Blastoise"]
visible = false
position = Vector2(72, -51)
scale = Vector2(1.37963, 1.32407)
sprite_frames = SubResource("SpriteFrames_ve27k")
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/Blastoise/BlastoiseSelect"]
libraries = {
"": SubResource("AnimationLibrary_qdrhr")
}
autoplay = "blastoise select"

[connection signal="pressed" from="TextureRect/Venasaur" to="." method="_on_venasaur_pressed"]
[connection signal="pressed" from="TextureRect/Charizard" to="." method="_on_charizard_pressed"]
[connection signal="pressed" from="TextureRect/Blastoise" to="." method="_on_blastoise_pressed"]
